--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Registro</title>
+
   <style>
     body {
       background: #111;
@@ -28,48 +29,44 @@
     }
 
     button {
-      padding: 10px;
       width: 100%;
+      padding: 10px;
       background: #4CAF50;
       color: white;
       border: none;
       border-radius: 5px;
       font-size: 16px;
-      margin-top: 10px;
+      cursor: pointer;
     }
 
-    .resultado {
-      margin-top: 20px;
+    button:hover {
+      background: #43a047;
     }
   </style>
 </head>
+
 <body>
 
-  <h1>Registro 📝</h1>
+  <h1>Registro</h1>
 
-  <form id="formulario">
+  <form onsubmit="registrar(event)">
     <input type="text" id="nombre" placeholder="Nombre" required>
-    <input type="number" id="edad" placeholder="Edad" required>
     <input type="email" id="correo" placeholder="Correo" required>
-    <button type="submit">Registrarse</button>
+    <button type="submit">Registrar</button>
   </form>
 
-  <div class="resultado" id="resultado"></div>
-
   <script>
-    document.getElementById("formulario").addEventListener("submit", function (e) {
+    function registrar(e) {
       e.preventDefault();
 
-      var nombre = document.getElementById("nombre").value;
-      var edad = document.getElementById("edad").value;
-      var correo = document.getElementById("correo").value;
+      const nombre = document.getElementById("nombre").value;
+      const correo = document.getElementById("correo").value;
 
-      document.getElementById("resultado").innerHTML =
-        "<h3>Datos registrados ✅</h3>" +
-        "<p>Nombre: " + nombre + "</p>" +
-        "<p>Edad: " + edad + "</p>" +
-        "<p>Correo: " + correo + "</p>";
-    });
+      localStorage.setItem("nombre", nombre);
+      localStorage.setItem("correo", correo);
+
+      alert("Registro exitoso ✅\n\nNombre: " + nombre + "\nCorreo: " + correo);
+    }
   </script>
 
 </body>
